--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "scripts": {
         "start": "cross-env NODE_ENV=development webpack serve --history-api-fallback",
         "build": "cross-env NODE_ENV=production webpack",
+        "update": "pnpm up",
         "lint": "eslint src/**/*.{js,vue}",
         "lint:fix": "eslint --fix src/**/*.{js,vue}",
         "clean": "rd /s /q .build",
@@ -29,7 +30,6 @@
         "css-loader": "^6.8.1",
         "css-minimizer-webpack-plugin": "^4.2.2",
         "cssnano": "^5.1.15",
-        "dotenv-webpack": "^8.0.1",
         "esbuild": "^0.14.54",
         "eslint": "^8.47.0",
         "eslint-import-resolver-alias": "^1.1.2",
