:adhesive_bandage: Change on npm scripts 'build', delete former useless files and with ignore files

--- a/original-project/package.json
+++ b/original-project/package.json
@@ -6,8 +6,8 @@
     "upload": "surge ./dist/ bitcoin-state-alex.surge.sh",
     "lint": "eslint src/**/*.js",
     "lint:fix": "eslint --fix src/**/*.js",
-    "clean": "rd /s /q .build",
-    "clean:all": "rd /s /q node_modules .build & rd /s /q .build & del /q package-lock.json & del /q pnpm-lock.yaml"
+    "clean": "rd /s /q build",
+    "clean:all": "rd /s /q node_modules build & rd /s /q build & del /q package-lock.json & del /q pnpm-lock.yaml"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
